--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 !lexical main.c Makefile README.md syntax.y 
-!include/dec.h include/node.h 
+!include/syntax.h include/type.h 
 !util/rbtree.h util/rbtree.c util/tree_operation.h util/tree_operation.c
-!symtab
+!symtab/symtab.c symtab/symtab.h
