--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 !include/syntax.h include/type.h 
 !util/rbtree.h util/rbtree.c util/tree_operation.h util/tree_operation.c
 !symtab/symtab.c symtab/symtab.h
+!semantic/semantic.h semantic/semantic.c
